tests/mm0_mmu/fail/bad-sort243.mmu
-- bad modifier order
(sort s243 strict free provable)